src/objects/Report_Scheduler__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this is use for the setup of the Report Scheduler</description>
    <fields>
        <fullName>Attachment_File_Name__c</fullName>
        <inlineHelpText>it should have end with its extension name like report.csv or report.xls</inlineHelpText>
        <label>Attachment File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Recipients__c</fullName>
        <label>Email Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID__c</fullName>
        <label>Report ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Report Scheduler</label>
</CustomObject>